@@ -13,6 +13,9 @@ Deprecated
 Features added
 --------------
 
+* #8107: autodoc: Add ``class-doc-from`` option to :rst:dir:`autoclass`
+  directive to control the content of the specific class like
+  :confval:`autoclass_content`
 * #9129: html search: Show search summaries when html_copy_source = False
 * #9097: Optimize the paralell build
 
